--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         pg_twoplayers.h pg_twoplayers.cpp pg_twoplayers.ui
         pg_allplayers.h pg_allplayers.cpp pg_allplayers.ui
         pg_tournament.h pg_tournament.cpp pg_tournament.ui
+        slider.h slider.cpp slider.ui
 
 
 
