tries to implement sandbox mode with ui
Note:
sorry i didn't notice the original allplayer ui
the file is still in the repo, but not in CMakeLists i.e. the project
feel free to check on them, especially pg_allplayers.ui
Also i altered the Control_signal part a bit
original code in comments

bugs TO FIX:
Deconstructor conflicts
tournament button not responding
(too tired to fix them tonight)

TODO:
implement animation for sandbox @VincentWangzt
implement spinboxes(might need custom widgets) @VincentWangzt
beautify tournament ui @octopusflyz
fix deconstructor bug @octopusflyz
fix the button bug @sms-hty
try to implement the previous pages @sms-hty

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,9 +38,11 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         pg_welcome.h pg_welcome.cpp pg_welcome.ui
         pg_rules.h pg_rules.cpp pg_rules.ui
         pg_twoplayers.h pg_twoplayers.cpp pg_twoplayers.ui
-        pg_allplayers.h pg_allplayers.cpp pg_allplayers.ui
+
         pg_tournament.h pg_tournament.cpp pg_tournament.ui
         slider.h slider.cpp slider.ui
+        pg_sandbox.h pg_sandbox.cpp pg_sandbox.ui
+        sandbox_ui.h sandbox_ui.cpp
 
 
 
